--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ openai = "^0.27.2"
 gunicorn = "^20.1.0"
 pydantic = "^1.10.7"
 starlette = "^0.26.1"
-logging = "^0.4.9.6"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
