--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ terraform.rc
 # Ignore the .terraform/plugins directory, which contains the installed plugin
 # binaries for each provider
 .terraform/plugins
+
+data/
+*.pkl
