--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,14 @@ openai = "^0.27.2"
 gunicorn = "^20.1.0"
 pydantic = "^1.10.7"
 starlette = "^0.26.1"
+faiss-cpu = "^1.7.4"
 python-dotenv = "^1.0.0"
+pypdf = "^3.9.1"
+pycryptodome = "^3.18.0"
+ipdb = "^0.13.13"
+tiktoken = "^0.4.0"
+ipykernel = "^6.23.1"
+transformers = "^4.30.1"
 
 
 [build-system]
